# ricochet-refresh

./: .gitignore  BUILDING.md  README.md
src/: CMakeLists.txt  clang-format  cppcheck-suppress
src/cmake/: compiler_opts.cmake
src/cmake/compiler/san/: clang-san.cmake  gcc-san.cmake  msvc-san.cmake
src/cmake/compiler/static/: clang-static.cmake  gcc-static.cmake  mingw-static.cmake  msvc-static.cmake
src/cmake/compiler/warnings/: clang-warnings.cmake  gcc-warnings.cmake  msvc-warnings.cmake
src/libtego/: CMakeLists.txt
src/libtego/include/tego/: logger.hpp  tego.h  tego.hpp  utilities.hpp
src/libtego/source/: context.cpp  context.hpp  delete.cpp  ed25519.cpp  ed25519.hpp  error.cpp  error.hpp  file_hash.cpp  libtego.cpp  signals.cpp  signals.hpp  tor.cpp  tor.hpp  user.cpp  user.hpp
src/libtego/source/core/: ContactIDValidator.cpp  ContactIDValidator.h  ContactUser.cpp  ContactUser.h  ContactsManager.cpp  ContactsManager.h  ConversationModel.cpp  ConversationModel.h  IdentityManager.cpp  IdentityManager.h  IncomingRequestManager.cpp  IncomingRequestManager.h  OutgoingContactRequest.cpp  OutgoingContactRequest.h  UserIdentity.cpp  UserIdentity.h
src/libtego/source/protocol/: ContactRequestChannel.cpp  FileChannel.cpp  FileChannel.h
src/libtego/source/tor/: TorControl.cpp  TorManager.cpp
src/libtego/source/utils/: CryptoKey.cpp  CryptoKey.h
src/libtego_rs/: CMakeLists.txt  Cargo.toml
src/libtego_rs/crates/: CMakeLists.txt
src/libtego_rs/crates/rico-profile/: Cargo.toml  README.md
src/libtego_rs/crates/rico-profile/src/v4/: profile.rs
src/libtego_rs/crates/rico-protocol/: CMakeLists.txt  Cargo.toml  README.md  build.rs
src/libtego_rs/crates/rico-protocol/src/: lib.rs
src/libtego_rs/crates/rico-protocol/src/v3/: channel_map.rs  file_hasher.rs  message.rs  mod.rs  packet_handler.rs
src/libtego_rs/crates/rico-protocol/src/v4/: payload.rs
src/libtego_rs/crates/rico-protocol/tests/v3/: auth_hidden_service.rs  chat_channel.rs  contact_request_channel.rs  control.rs  file_channel.rs  introduction.rs  main.rs  message.rs  packet_handler_legacy_client.rs  packet_handler_legacy_host.rs
src/libtego_rs/crates/rico-settings/: CMakeLists.txt  Cargo.toml  README.md
src/libtego_rs/crates/rico-settings/src/: lib.rs
src/libtego_rs/crates/rico-settings/src/v3/: settings.rs
src/libtego_rs/crates/rico-settings/tests/v3/: deserialize.rs
src/libtego_rs/crates/tego-rs/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
src/libtego_rs/crates/tego-rs/include/tego/: logger.hpp  tego.hpp  utilities.hpp
src/libtego_rs/crates/tego-rs/src/: callbacks.rs  command_queue.rs  context.rs  error.rs  event_loop_task.rs  ffi.rs  file_hash.rs  lib.rs  listener_task.rs  logger.rs  macros.rs  object_map.rs  promise.rs  tor_daemon_config.rs  tor_launch_config.rs  user_id.rs
src/libtego_ui/: CMakeLists.txt  libtego_callbacks.cpp  pluggables.hpp
src/libtego_ui/shims/: ContactUser.cpp  ContactUser.h  ConversationModel.cpp  ConversationModel.h  IncomingContactRequest.cpp  TorControl.cpp  TorControl.h  TorManager.cpp  TorManager.h  UserIdentity.cpp  UserIdentity.h
src/ricochet-refresh/: CMakeLists.txt  libtego_callbacks.cpp  main.cpp  precomp.hpp
src/ricochet-refresh-qt/: .gitignore  Cargo.toml  build_pluggables.rs  libtego_callbacks.cpp  libtego_callbacks.hpp  main.cpp  precomp.hpp
src/ricochet-refresh-qt/shims/: ContactIDValidator.cpp  ContactsManager.cpp  IncomingContactRequest.h  TorControl.cpp  UserIdentity.cpp
src/ricochet-refresh-qt/translation/: ricochet_bg.ts  ricochet_en.ts  ricochet_es.ts  ricochet_it_IT.ts  ricochet_ja.ts  ricochet_pt_PT.ts  ricochet_sq.ts  ricochet_tr.ts  ricochet_uk.ts
src/ricochet-refresh-qt/ui/: MainToolBar.qml  MainWindow.qml
src/ricochet-refresh-qt/utils/: Settings.cpp
src/ricochet-refresh-wx-widgets/: CMakeLists.txt  enums.hpp  locale.cpp  locale.hpp  main.cpp  mock_ffi.cpp  mock_ffi.hpp  precomp.hpp  strings.cpp  strings.hpp
src/ricochet-refresh-wx-widgets/platform/windows/: ricochet-refresh.rc
src/ricochet-refresh-wx-widgets/translations/: ar-ricochet-refresh.po  de-ricochet-refresh.po  es-ricochet-refresh.po  nl-ricochet-refresh.po
src/ricochet-refresh-wx-widgets/ui/: bootstrap_panel.cpp  bootstrap_panel.hpp  chat_panel.cpp  chat_panel.hpp  connected_panel.cpp  connected_panel.hpp  connecting_panel.cpp  connecting_panel.hpp  connection_settings_panel.cpp  connection_settings_panel.hpp  connection_status_panel.cpp  connection_status_panel.hpp  contact_group_heading_panel.cpp  contact_group_heading_panel.hpp  contact_list_panel.cpp  contact_list_panel.hpp  contact_panel.cpp  contact_panel.hpp  conversations_panel.cpp  conversations_panel.hpp  disconnected_panel.cpp  disconnected_panel.hpp  events.cpp  events.hpp  fonts.cpp  fonts.hpp  general_settings_panel.cpp  general_settings_panel.hpp  interface_settings_panel.cpp  interface_settings_panel.hpp  main_frame.cpp  main_frame.hpp  message_entry_panel.cpp  message_entry_panel.hpp  metrics.cpp  metrics.hpp  settings_panel.cpp  settings_panel.hpp  user_status_panel.cpp  user_status_panel.hpp  (+2 more)
src/ricochet-refresh/resources/darwin/: Info.plist.in
src/ricochet-refresh/shims/: ContactIDValidator.cpp  ContactUser.cpp  ContactUser.h  ContactsManager.cpp  ContactsManager.h  ConversationModel.cpp  IncomingContactRequest.cpp  OutgoingContactRequest.cpp  TorControl.cpp  TorControl.h  UserIdentity.cpp  UserIdentity.h
src/ricochet-refresh/translation/: ricochet_bg.ts  ricochet_cs.ts  ricochet_da.ts  ricochet_de.ts  ricochet_en.ts  ricochet_es.ts  ricochet_et_EE.ts  ricochet_fi.ts  ricochet_fil_PH.ts  ricochet_fr.ts  ricochet_he.ts  ricochet_it.ts  ricochet_it_IT.ts  ricochet_ja.ts  ricochet_nb.ts  ricochet_nl_NL.ts  ricochet_pl.ts  ricochet_pt_BR.ts  ricochet_pt_PT.ts  ricochet_ru.ts  ricochet_sl.ts  ricochet_sq.ts  ricochet_sv.ts  ricochet_tr.ts  ricochet_uk.ts  ricochet_zh.ts  ricochet_zh_HK.ts
src/ricochet-refresh/ui/: ChatPage.qml  ContactRequestDialog.qml  NetworkSetupWizard.qml  TorBootstrapStatus.qml  TorConfigurationPage.qml  TorPreferences.qml  main.qml  qml.qrc
(+11 files in other folders)
