[package]
name = "rico-protocol"
authors = ["morgan@blueprintforfreespeech.net"]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "A library implementing the Ricochet-Refresh 3.0 chat protocol"
repository = "https://github.com/blueprint-freespeech/ricochet-refresh"

[build-dependencies]
protobuf-codegen = "3.0"

[dependencies]
protobuf = "3.0"
thiserror = "1.0"
tor-interface = "0.5"
unicode-general-category = "1.0"
